# ohmyfpg

./: .flake8  .gitignore  .semver-cargo-lock-core.toml  .semver-cargo-lock.toml  .semver.toml  Cargo.toml  Dockerfile.performance  HISTORY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
ohmyfpg/: Cargo.toml
ohmyfpg/src/: bindings.rs  lib.rs  server.rs
ohmyfpg/src/messages/: authentication.rs  startup.rs
ohmyfpg_core/: Cargo.toml
ohmyfpg_core/examples/: connect.rs  simple_query.rs
ohmyfpg_core/src/: client.rs  messages.rs
ohmyfpg_core/src/client/: dsn.rs  error.rs  framer.rs
ohmyfpg_core/src/client/dsn/: error.rs
ohmyfpg_core/src/messages/: error.rs  query.rs
ohmyfpg_core/src/messages/authentication/: sasl.rs
ohmyfpg_core/src/messages/query/: backend.rs  frontend.rs
performance/: compare.py
python/examples/: simple_query.py
python/ohmyfpg/: __init__.py
python/tests/: test_ohmyfpg.py
src/: bindings.rs  client.rs  lib.rs  messages.rs
src/messages/: authentication.rs  query.rs  startup.rs
src/messages/authentication/: sasl.rs  tests.rs
src/messages/authentication/sasl/: backend.rs  frontend.rs
src/messages/query/: backend.rs  frontend.rs
src/messages/startup/: tests.rs
