[package]
name = "ohmyfpg"
version = "0.1.0-dev.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohmyfpg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "python"