[package]
name = "ohmyfpg"
version = "0.1.0-dev.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohmyfpg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
tokio = "1.19.2"
regex = "1.5"
futures = "0.3.21"

[package.metadata.maturin]
python-source = "python"