[package]
name = "ohmyfpg_core"
version = "0.4.0-dev.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ohmyfpg_core"

[dependencies]
tokio = { version = "1.19.2", features = ["io-util", "net", "sync"] }
regex = "1.5"
getrandom = "0.2.7"
base64 = "0.13.0"
scram = "0.6.0"
rayon = "1.5.3"
bytes = "1.2.1"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["io-util", "net", "rt", "rt-multi-thread", "macros"] }